# childrens_stories

./: .gitignore  CLAUDE.md  Makefile  README.md  childrens-stories-api.service  childrens-stories-worker.service  migrate-to-worktrees.sh  pyproject.toml
.beads/: issues.jsonl  last-touched
.claude/commands/: find_issues.md  fix_issues.md
.claude/hooks/: pre-commit-checks.sh
backend/: worker.py
backend/api/: arq_pool.py  config.py  dependencies.py  logging.py  main.py
backend/config/: __init__.py  image.py  llm.py
backend/core/: __init__.py  cost_calculator.py  cost_tracking.py  homographs.py  reference_stories.py  types.py
backend/metrics/: __init__.py  outline_quality.py  story_quality.py
backend/optimization/: optimize_page_writer.py
cli/: debug_page.py  generate_story.py  migrate_to_postgres.py  run_api.py  run_vlm_qa.py  run_worker.py
docs/: mac-ios-build-guide.md
docs/agent/: dspy-patterns.md  frontend-development.md  story-standards.md
docs/design/: editing-and-feedback.md  r2-image-storage.md
docs/prototypes/: error-screen.jsx  new-story.jsx  story-creation.jsx  story-library.jsx  story-reader.jsx
examples/: README.md
examples/illustrated_story/: README.md  story.md
examples/simple_story/: README.md  story.md
frontend/: app.json  babel.config.js  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  playwright.config.ts
frontend/app/: _layout.tsx  edit-prompt.tsx  index.tsx  login.tsx  new-voice.tsx  new.tsx  settings.tsx
frontend/components/: KaraokeText.tsx  SpreadEditOverlay.tsx  StoryCard.tsx  TappableText.tsx
frontend/e2e/: story-creation.spec.ts  story-library.spec.ts
frontend/lib/: api.ts  auth-storage.ts  background-download-manager.ts  cache-events.ts  cache-files.ts  cache-storage.ts  cache-sync.ts  download-queue-storage.ts  fonts.ts  native-downloader.ts  network-aware.ts  query-client.ts  remote-logger.ts  story-cache.ts  story-prompts.ts  use-story-cache.ts
llm_evals/: conftest.py  test_image_generation.py
scripts/: compare_models.py  debug_page.py  diagnose_character_refs.py  generate_story.py  regenerate_story.py  run_api.py  test_contents_building.py
scripts/hooks/: post-commit  pre-commit
src/: __init__.py  config.py  types.py
src/api/: __init__.py  config.py  dependencies.py  main.py
src/config/: __init__.py  image.py  llm.py  story.py
src/metrics/: outline_quality.py
src/modules/: __init__.py  character_sheet_generator.py  illustration_styles.py  image_qa.py  outline_generator.py  page_generator.py  page_illustrator.py  quality_judge.py  vlm_judge.py  vqa_scorer.py
src/optimization/: __init__.py  optimize_page_writer.py
src/programs/: story_generator.py
src/signatures/: __init__.py  character_bible.py  illustration_style.py  page_writer.py
tests/: conftest.py  test_api_stories.py  test_image_extraction.py  test_page_illustrator.py
tests/costly/: conftest.py  test_image_generation.py
tests/integration/: __init__.py  conftest.py  test_arq_integration.py  test_image_generation.py
tests/llm_eval/: README.md  __init__.py  conftest.py  homographs.py  test_cases.py  test_disambiguation.py  test_entity_format.py
tests/unit/: __init__.py  conftest.py  test_api_hume_token.py  test_api_stories.py  test_arq_worker.py  test_bible_entity_matching.py  test_character_aliases.py  test_character_bible_storage.py  test_character_selection.py  test_cost_calculator.py  test_cost_tracking.py  test_entity_ids.py  test_illustration_status.py  test_image_extraction.py  test_image_qa.py  test_image_retry.py  test_page_illustrator.py  test_signatures.py  test_types.py  (+7 more)
(+127 files in other folders)
