[project]
name = "childrens-stories"
version = "0.1.0"
description = "AI agent for generating children's picture books using DSPy and GEPA optimization"
authors = [
    {name = "Kavin Stewart"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dspy (>=3.0.4,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "google-genai (>=1.55.0,<2.0.0)",
    "clip (>=0.2.0,<0.3.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.32.0,<1.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "arq (>=0.26.3,<0.27.0)",
    "deepgram-sdk (>=5.3.0,<6.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "cartesia (>=2.0.17,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
clip = {source = "pypi"}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
mypy = "^1.19.1"
ruff = "^0.14.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
# Exclude costly tests from default runs (require API key, cost money)
addopts = "--ignore=tests/costly --ignore=tests/llm_eval"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "dspy.*",
    "google.genai.*",
    "tenacity.*",
    "clip.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

